--- a/app/static/app/styles/table.css
+++ b/app/static/app/styles/table.css
@@ -42,7 +42,8 @@
 .player-info {
     width: 60px;
     height: 60px;
-    background: #333;
+    /*background: #333;*/
+    background: transparent;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
@@ -58,7 +59,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /*background: url("img/dupkso.png") no-repeat center center;*/
+    /*background: url("/static/app/img/dupkso.png") no-repeat center center;*/
     background-size: contain;
     width: 50%;
     height: 20%;
@@ -101,11 +102,11 @@
     transform: translate(-50%, -50%);
 }
 
-#seat-0 { top: 10%; left: 50%; }
-#seat-1 { top: 25%; left: 80%; }
-#seat-2 { top: 50%; left: 90%; }
-#seat-3 { top: 75%; left: 80%; }
-#seat-4 { top: 90%; left: 50%; }
-#seat-5 { top: 75%; left: 20%; }
-#seat-6 { top: 50%; left: 10%; }
-#seat-7 { top: 25%; left: 20%; }
+#seat-4 { top: 10%; left: 50%; }
+#seat-5 { top: 25%; left: 80%; }
+#seat-6 { top: 50%; left: 90%; }
+#seat-7 { top: 75%; left: 80%; }
+#seat-0 { top: 90%; left: 50%; }
+#seat-1 { top: 75%; left: 20%; }
+#seat-2 { top: 50%; left: 10%; }
+#seat-3 { top: 25%; left: 20%; }
