--- a/app/templates/app/404.html
+++ b/app/templates/app/404.html
@@ -2,11 +2,11 @@
 {% block content %}
     <!-- Main Content -->
     <div class="main-content">
-        <h1>404 - Strona nie znaleziona</h1>
-        <p>Przepraszamy, ale strona której szukasz nie istnieje.</p>
-        <a href="{% url 'index' %}"><button class="btn btn-primary btn-lg">Wróć do strony głównej</button></a>
+        <h1>404 - Page not found</h1>
+        <p>Site you're looking for doesn't exists</p>
+        <a href="{% url 'index' %}"><button class="btn btn-primary btn-lg">Back to home</button></a>
         {% if user.is_authenticated %}
-            <a href="{% url 'rooms' %}"><button class="btn btn-secondary btn-lg ml-2">Przejdź do pokoi</button></a>
+            <a href="{% url 'rooms' %}"><button class="btn btn-secondary btn-lg ml-2">Go to rooms</button></a>
         {% endif %}
     </div>
 {% endblock %}
