--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,14 +1,14 @@
 <!-- Footer -->
 <footer class="text-center">
-    <p>&copy; 2024 Nowoczesna Strona. Wszystkie prawa zastrzeżone.</p>
+    <p>&copy; 2025 Poker Site. All rights restricted.</p>
     <div>
-        <a href="#" class="mr-3">
-            <i class="fab fa-facebook-f"></i>
+        <a href="https://gitlab.com/Gorn456" class="mr-3">
+            <i class="fab fa-gitlab"></i>
         </a>
-        <a href="#" class="mr-3">
-            <i class="fab fa-twitter"></i>
+        <a href="https://www.linkedin.com/in/kamil-kasperek-579511286/" class="mr-3">
+            <i class="fab fa-linkedin"></i>
         </a>
-        <a href="#" class="mr-3">
+        <a href="https://github.com/kkamilkasperek/poker-site" class="mr-3">
             <i class="fab fa-github"></i>
         </a>
     </div>
