--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -2,8 +2,10 @@
 {% block content %}
     <!-- Main Content -->
     <div class="main-content">
-        <h1>Witamy na naszej stronie!</h1>
-        <p>Najlepsze miejsce na Twoje potrzeby.</p>
-        <a href="{% url 'login' %}"><button class="btn btn-primary btn-lg">Zaloguj się</button></a>
+        <h1>Welcome!</h1>
+        <p>Best poker site on the globe</p>
+        {% if not user.is_authenticated %}
+            <a href="{% url 'login' %}"><button class="btn btn-primary btn-lg">Zaloguj się</button></a>
+        {% endif %}
     </div>
 {% endblock %}
